--- a/Css/Estilo.css
+++ b/Css/Estilo.css
@@ -3,107 +3,255 @@ body{
  	font-family: Raleway, Arial, Helvetica, sans-serif;
  	color:black;
  		}
+
+.header{
+	height: 70px;
+	background:  #FBA919;
+	position: relative;
+	border: 1px solid #484D4A;	
+}
+
+.logo{
+	position: absolute;
+	left: 50%;
+	margin-top: 33px;
+	transform: translateX(-50%) translateY(-50%);
+	color: black;
+	text-align: center;
+}
+.header .cabeza{
+	display: flex;
+	justify-content: space-between;
+}
+.nav{
+	position: absolute;
+	margin-top: 25px;
+}
+
+#nav-1{left: 1%;}
+#nav-2{right: 1%;}
+
 .menu{
 	list-style: none;
-	padding:;
-	background: #FBA919;
-	width:10000%;
-	max-width: 1000px;
-	margin: auto; 
+	padding: 0;
+	margin: 0;
 }
-.menu li a{
-	text-decoration: none;
-	color:black;
-	padding: 20px;
-	display:block;
-	margin: 0 7rem;
-}
-
 .menu li{
-	display: inline-block;
-	text-align: center;
-
-
+	display: inline;
 }
-.menu li a:hover{
-	background:orange;
+.menu__link{
+	padding: 15px;
+	background: #FBA919;
+	text-decoration: none;
+	color: black;
+}
+.menu__link:hover {
+	background: white;
+	color: #FBA919;
 }
 
- #container{ 
- 	width: 1100px;
+ .contenedor{ 
+ 	width: 80%;
+ 	min-width: 964px;
  	margin: 0px auto;
  	border: 1px solid #484D4A;
- 	
  	color:black;
- 			} 
- 	header{ 
- 		background: #484D4A;
- 		color:black;
+ 	text-align: center;
+ 	font-size: 14px;
+ 			}  	
+ #contVer{font-size: 1.5vh; padding-left: 10px;}
+ 
+ .article{
+ 	font-size: 2vh;
+ }
+
+/* ------------------------- Recetas -------------------------- */
+.contenedorDatos{
+	/*display: flex;*/
+}
+
+.receta{ 
+	background-color:white;
+	text-align: left;	
+	width: auto;
+	height: 123px;
+ 	margin: 5px;
+ 	border: 1px solid #484D4A;
+ 	color: black;
+ }
+
+ .receta:hover { 
+ 	margin: 0px; 
+ 	width: 99%; 
+ 	height: 126px;
+ }
+ .recetaContenido p {padding-left: 10px; padding-right: 10px; }
+
+.recetaLink{
+	color: black;
+	text-decoration: none;
+}
+
+.recetaContenido {display: flex;}
+.recetaContenido:hover {color: #FBA919}
+.contenedorCont {width: 100%;}
+.receta:hover .fotoReceta {filter: sepia(60%);}
+
+.fotoReceta{
+	height: 100px;
+	width: 170px;
+	padding: 10px;
+}
+
+ .receta-2{ 
+	text-align: left;	
+	width: 75%;
+ 	margin: 5px;
+ 	color: black; 
+ }
+
+ .contenedor li {
+ 	padding: 3px;
+ 	font-size: 1.7vh;
+ }
+
+ .dura{ text-align: right; }
+ 
+.imagenComida{
+	width: 250px;
+	margin: 5px;
+	height:150px;
+	padding: 10px;
+}
+ .clearfix{ 
+ 	 clear:both;
+ 	 text-align: left;
+ 	 padding: 5px;
  		} 
- 	
- 	
- 	 .clearfix{ 
- 	 	clear:both;
- 		 } 
- 	 #content{ 
- 			
- 			 } 
-.principal{ 
- 			width:1040px;
- 			height:495px;
- 			margin:auto;
- 			display:block;
- 		 } 
-.tu-placar-virtual{
-	margin: 30px;
-
-		} 
-
-.modelo-1{
-	width: 300px;
-	margin:45px 45px;
-	height:350px ;
-		} 
-
-.modelo-2{
-	width:300px;
-	margin:20px 10px;
-	height:400px ;
-		} 
- .modelo-3{
-	width: 300px;
-	margin:35px;
-
-		} 
-
-.placard-info{
-	margin:10px 70px;
-
-		} 
-
-.quienes-somos{
-	margin:15px 500px;
-	} 
 
 .indumentaria{
 	float:left;
 	margin: 10px 30px;
 	}
+/*----------------Estilos de Imagen----------------*/
+#imagen {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    opacity: 0;
+}
 
-.contactanos{
-	text-align: right;
-	}
+#contenedor_imagen {
+    position: relative;
+    padding: 15px;
+    padding-left: 0px;
+    padding-right: 0px;
+    width: 25%;
+    background: #FBA919;
+    color: black;
+    border-radius: 5px;
+    margin: auto;
+    margin-top: 30px;
+    cursor: pointer;
+    text-align: center;
+}
 
-.num{
-	text-align: right;
-	}
+.boton{ width: 12.5%;}
 
-.indumentaria-2{
-	float: left;
-	margin:1px 150px;
-	}
+.boton{
+	padding: 15px;
+	background: #FBA919;
+	text-decoration: none;
+	color: black;
+	border: 1px solid white;
+	border-radius: 5px;
+}
+.boton:hover {
+	background: white;
+	color: #FBA919;
+}
 
-.contactanos-2{
-	text-align: right;
-	margin: 10px 10px;
-	}
+#contenedor_imagen:hover{ background: cadetblue; }
+
+#texto_imagen {
+    font-size: 20px;
+ }
+
+#previsualizar{
+    height: 235px;
+    width: 235px;
+    object-fit: contain;
+    border: 1px solid #000000;
+    display:block;
+    margin:auto;
+}
+
+/*----------------Estilos de Caracteristicas----------------*/
+
+#cajaEditor{
+	border: 0px;
+	display: block;
+}
+
+.input{
+    font-size: 15px;
+    width: 98%;
+    padding: 10px;
+    border: none;
+    margin-bottom: 15px;
+    border: 1px solid #aaa;
+}
+
+.input2{
+    font-size: 15px;
+    width: 98%;
+    padding: 10px;
+    border: none;
+    border: 1px solid #aaa;
+}
+
+.Mas{
+    border: none;
+    width: 20px;
+    height: 20px;
+    color: black;
+    font-size: 15px;
+    background:  #FBA919;
+    cursor: pointer;
+    float: right;
+    margin-top: 5px;
+}
+
+.Mas:hover{
+    background: cadetblue;
+}
+
+.Boton{
+    border: none;
+    width: 100%;
+    color: black;
+    font-size: 20px;
+    background:  #FBA919;
+    padding: 15px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.Boton:hover{
+    background: cadetblue;
+}
+
+p{
+    text-align: center;
+}
+.Formulario{
+    margin: auto;
+    width: 500px;
+    margin-top: 150px;
+    border-radius: 2%;
+}
