--- a/Css/Estilo.css
+++ b/Css/Estilo.css
@@ -54,12 +54,13 @@ body{
  	width: 80%;
  	min-width: 964px;
  	margin: 0px auto;
- 	border: 1px solid #484D4A;
+ 	/*border: 1px solid #484D4A;*/
  	color:black;
  	text-align: center;
  	font-size: 14px;
  			}  	
- #contVer{font-size: 1.5vh; padding-left: 10px;}
+
+ #contVer{font-size: 1.5vh; padding: 10px;}
  
  .article{
  	font-size: 2vh;
@@ -71,7 +72,7 @@ body{
 }
 
 .receta{ 
-	background-color:white;
+	background-color:;
 	text-align: left;	
 	width: auto;
 	height: 123px;
