--- a/Css/Estilo.css
+++ b/Css/Estilo.css
@@ -1,7 +1,7 @@
 body{
-	background-color:white;
+	background-color:#7F9966;
  	font-family: Raleway, Arial, Helvetica, sans-serif;
- 	color:black;
+ 	color:#222;
  		}
 
 .header{
@@ -60,7 +60,12 @@ body{
  	font-size: 14px;
  			}  	
 
- #contVer{font-size: 1.5vh; padding: 10px;}
+ #contVer{
+    font-size: 1.5vh; 
+    padding: 10px; 
+    background: #efefef;
+    border: 1px solid #222;
+}
  
  .article{
  	font-size: 2vh;
@@ -79,6 +84,7 @@ body{
  	margin: 5px;
  	border: 1px solid #484D4A;
  	color: black;
+    background: #efefef;
  }
 
  .receta:hover { 
